5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4150/executions/1637_2446.log
== TEST (2019-04-11 00:13:33) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplicacao = b * f * j

if (soma % multiplicacao == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    if (soma % multiplicacao == 0 ):
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:13:45) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplicacao = b * f * j

if (soma % multiplicacao == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    if (soma % multiplicacao == 0 ):
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:14:10) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplicacao = b * f * j

if (soma % multiplicacao = 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- ERROR:
File "XXXX", line 21
    if (soma % multiplicacao = 0 ):
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:14:37) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplicacao = b * f * j

if (soma % multiplicacao == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 21, in <module>
    if (soma % multiplicacao == 0 ):
ZeroDivisionError: float modulo
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:17:01) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:17:09) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:28:28) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma // multiplo == 0 ):
	print("acesso liberado")
else: 
	print("senha invalida")
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:30:29) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:30:38) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- OUTPUT:
senha invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:32:16) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i / 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- EXECUTION TIME:
0.197633
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
senha invalida
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
senha invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:37:19) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i // 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 00:37:26) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i // 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- OUTPUT:
acesso liberado
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 00:37:35) 
-- CODE:
a = int(input( "digite a sua senha: "))

b = a//100000 #1
c = a%100000 #23456

d = c // 10000 # 2
e = c % 10000 # 3456

f = e // 1000 #3
g = e % 1000 #456

h =  g // 100 # 4
i = g % 100 # 56

j = i // 10 # 5
k = i % 10 # 6

soma = d + h + k
multiplo = b + f + j

if (soma % multiplo == 0 ):
	mensagem = "acesso liberado"
else: 
	mensagem = "senha invalida"

print(mensagem)
-- EXECUTION TIME:
0.131985
-- TEST CASE 1:
---- input:
087612
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- TEST CASE 2:
---- input:
760834
---- correct output:
senha invalida
---- user output:
senha invalida
-- TEST CASE 3:
---- input:
122967
---- correct output:
acesso liberado
---- user output:
acesso liberado
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
